testsuite/tests/properties/invalid_eq/int_bool/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun prop(): Bool = 1 == true
}
